// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`babel keepNames > shows the effect of the custom mangler on bundled output 1`] = `
"defaults:
function o() {
  return o.name;
}
export { o as weappTwIgnore };
console.log(o());

keep:
export function weappTwIgnore() {
  return weappTwIgnore.name;
}
console.log(weappTwIgnore());
"
`;

exports[`esbuild keepNames > produces different minified outputs depending on keepNames 1`] = `
"defaults:
(() => {
  function o() {
    return 42;
  }
  console.log(o());
})();

keep:
(() => {
  var r = Object.defineProperty;
  var o = (e, n) => r(e, "name", { value: n, configurable: !0 });
  function p() {
    return 42;
  }
  o(p, "weappTwIgnore");
  console.log(p());
})();
"
`;

exports[`swc keep_fnames > shows the effect of keep_fnames on bundled output 1`] = `
"defaults:
function n() {
  return n.name;
}
console.log(n());

keep:
function weappTwIgnore() {
  return weappTwIgnore.name;
}
console.log(weappTwIgnore());
"
`;

exports[`terser-webpack keep_fnames > shows the effect of keep_fnames on bundled output 1`] = `
"defaults:
!(function () {
  "use strict";
  var e = {};
  ((e.d = function (n, o) {
    for (var t in o)
      e.o(o, t) &&
        !e.o(n, t) &&
        Object.defineProperty(n, t, { enumerable: !0, get: o[t] });
  }),
    (e.o = function (e, n) {
      return Object.prototype.hasOwnProperty.call(e, n);
    }),
    console.log(
      (function e() {
        return e.name;
      })(),
    ));
})();

keep:
!(function () {
  "use strict";
  var e = {};
  ((e.d = function (n, o) {
    for (var r in o)
      e.o(o, r) &&
        !e.o(n, r) &&
        Object.defineProperty(n, r, { enumerable: !0, get: o[r] });
  }),
    (e.o = function (e, n) {
      return Object.prototype.hasOwnProperty.call(e, n);
    }),
    console.log(
      (function weappTwIgnore() {
        return weappTwIgnore.name;
      })(),
    ));
})();
"
`;
